--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:EQUB7gBRtrEbdmSFGEOFHZNij4hH0P+VyfdFpk2ZnvM=
 APP_DEBUG=true
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE=samplequiz
+DB_USERNAME=root
 DB_PASSWORD=
